Fixed centering and alignment of social bar icon
Cropped the assets from 40x30 to 30x30 and updated CSS.
The original assets were too wide, which spaced the visible part
of the icon too far to the right of the status indicators,
and broke the vertical centering.

[endlessm/eos-shell#755]

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -643,8 +643,7 @@ StScrollBar StButton#vhandle:active {
 }
 
 .system-status-social-icon {
-    icon-size: 40px;
-    height: 30px;
+    icon-size: 30px;
 }
 
 
